Refactor logging and validation in JS engine and render services